--- a/src/styles/themes.less
+++ b/src/styles/themes.less
@@ -39,6 +39,7 @@
   --ant-tag-background-color: #f5f5f5;
   --ant-tag-border-color: #f0f0f0;
 
+  --skeleton-bg-color: rgb(238, 238, 238);
   --skeleton-bg-img: linear-gradient(
     90deg,
     rgb(238, 238, 238),
@@ -46,7 +47,7 @@
     rgb(238, 238, 238)
   );
 
-  --skeleton-bg-color: rgb(238, 238, 238);
+  --scrollbar-size: 8px;
   --scrollbar-track-color: #fff;
 
   --notifications-primary-bg: #fcf6ff;
@@ -94,6 +95,7 @@
   --ant-tag-background-color: rgba(255, 255, 255, 0.08);
   --ant-tag-border-color: #303030;
 
+  --skeleton-bg-color: rgb(70 70 70);
   --skeleton-bg-img: linear-gradient(
     90deg,
     rgb(66 66 66),
@@ -101,7 +103,7 @@
     rgb(66 66 66)
   );
 
-  --skeleton-bg-color: rgb(70 70 70);
+  --scrollbar-size: 8px;
   --scrollbar-track-color: #a0a0a0;
 
   --notifications-primary-bg: #1f1f1f;
